--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <section id="hero" style="background: url('/images/hero-background.jpg') top center; background-size: cover">
     <div class="container">
         <div class="row">
-            <div class="col-lg-7 col-12">
+            <div class="col-lg-7 col-md-9 col-12 p-0">
                 <div class="login-container">
                     <h1>Welcome to the HealthTrackRx Client Web Portal</h1>
                     <form class="login-form">
@@ -47,7 +47,7 @@
                         </div>
                         <div class="row">
                             <div class="col-12">
-                                <a href="/forgot-password" class="forgot-password">Forgot Your Password?</a>
+                                <a href="https://portal.healthtrackrx.com/?page=password" class="forgot-password">Forgot Your Password?</a>
                             </div>
                         </div>
                         <div class="row">
@@ -75,7 +75,7 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-lg-7 col-12 text-center">
-                <img src="/images/announcement-icon.png" alt="Announcements" class="mb-4" />
+                <img src="/images/announcement-icon.svg" alt="Announcements" width="73" height="75" class="mb-4">
                 <br />
                 <h2 class="mb-4">Occasional Message to CWP Users Headline</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin rutrum urna magna, sit amet sagittis mauris fringilla nec. Vestibulum rutrum, arcu et condimentum pretium, libero ante bibendum felis, vel ullamcorper libero purus ac tortor. Vivamus volutpat, lacus in tempus aliquet, enim massa sodales tellus, at tristique nibh felis eget neque. Vivamus non lectus ut lorem pulvinar cursus. Morbi tincidunt luctus pharetra.</p>
@@ -90,7 +90,7 @@
             <div class="col-md-6 col-12 contact-support text-center">
                 <div class="row justify-content-center h-100">
                     <div class="col-md-8">
-                        <img src="/images/contact-support-icon.png" alt="Contact Support" />
+                        <img src="/images/contact-icon.svg" alt="Contact Support" height="111" />
                         <p class="mt-2 mb-4 fw-bolder text-uppercase">Contact</p>
                         <h2>Contact support</h2>
                         <p>Do you need assistance? Let us help you!</p>
@@ -106,7 +106,7 @@
                 <div class="row justify-content-center h-100">
                     <div class="col-md-8 d-flex justify-content-between align-items-center flex-column">
                         <div>
-                            <img src="/images/tools-and-resources-icon.png" alt="Tools and Resources" />
+                            <img src="/images/htrx-university-icon.svg" alt="HealthTrackRX University" height="111" />
                             <p class="mt-2 mb-4 fw-bolder text-uppercase">Education</p>
                             <h2>Tools + Resources</h2>
                             <p>Visit HealthTrackRx University, your on-demand resource for infection testing made easy.</p>
@@ -133,7 +133,7 @@
                 </div>
                 <div class="col-xl-7 offset-xl-1 col-12 order-1 order-xl-2 mb-4 mb-xl-0">
                     <div class="row">
-                        <div class="col-md-3">
+                        <div class="col-md-3 col-4 order-md-1 order-2">
                             <h5 class="color-green">Legal</h5>
                             <ul class="list-unstyled">
                                 <li><a href="https://www.healthtrackrx.com/online-privacy-policy/">Privacy Policy</a></li>
@@ -141,7 +141,7 @@
                                 <li><a href="https://www.healthtrackrx.com/about-us/compliance/">Compliance</a></li>
                             </ul>
                         </div>
-                        <div class="col-md-4">
+                        <div class="col-md-5 order-md-2 order-3">
                             <h5 class="color-green">Contact Us</h5>
                             <ul class="list-unstyled">
                                 <li>1400 I-35 W<br />
@@ -151,10 +151,15 @@
                                 <li><a href="mailto:client.relations@healthtrackrx.com">client.relations@healthtrackrx.com</a></li>
                             </ul>
                         </div>
-                        <div class="col-auto footer-custom-column">
+                        <div class="col-md-4 col-8 order-md-3 order-1 footer-custom-column">
                             <ul class="list-unstyled">
-                                <li><a href="https://www.healthtrackrx.com/htrxu/" class="color-green fw-bold">HTRx University</a></li>
-                                <li><a href="https://www.healthtrackrx.com/" class="color-green fw-bold">HealthTrackRx.com</a></li>
+                                <li><a href="https://www.healthtrackrx.com/htrxu/" class="color-green fw-bold">HTRx University &rarr;</a></li>
+                                <li><a href="https://www.healthtrackrx.com/" class="color-green fw-bold">HealthTrackRx.com &rarr;</a></li>
+                                <li>
+                                    <a href="https://www.linkedin.com/company/healthtrackrx/" target="_blank"><img src="/images/linkedin-icon.svg" alt="LinkedIn" height="23" class="me-2" /></a>
+                                    <a href="https://www.facebook.com/healthtrackrx" target="_blank"><img src="/images/facebook-icon.svg" alt="Facebook" height="23" class="me-2" /></a>
+                                    <a href="https://www.youtube.com/@HealthTrackRx-PCR target="_blank""><img src="/images/youtube-icon.svg" alt="YouTube" height="23" /></a>
+                                </li>
                             </ul>
                         </div>
                     </div>
