--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </div>
 </header>
 
-<section id="hero" style="background: url('/images/hero-background.jpg') top center; background-size: cover">
+<section id="hero">
     <div class="container">
         <div class="row">
             <div class="col-lg-7 col-md-9 col-12 p-0">
@@ -67,7 +67,7 @@
     </div>
 </section>
 
-<section id="hero-background-mobile" style="background: url('/images/hero-background.jpg') top center; background-size: cover; width: 100%; height: 240px;" class="d-block d-md-none">
+<section id="hero-background-mobile" class="d-block d-md-none">
     <!-- This section is for mobile view only -->
 </section>
 
@@ -86,8 +86,8 @@
 
 <section id="resources">
     <div class="container">
-        <div class="row">
-            <div class="col-md-6 col-12 contact-support text-center">
+        <div class="row justify-content-center">
+            <div class="col-lg-6 col-md-10 col-12 contact-support text-center">
                 <div class="row justify-content-center h-100">
                     <div class="col-md-8">
                         <img src="/images/contact-icon.svg" alt="Contact Support" height="111" />
@@ -102,7 +102,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-6 col-12 tools-and-resources text-center">
+            <div class="col-lg-6 col-md-10 col-12 tools-and-resources text-center">
                 <div class="row justify-content-center h-100">
                     <div class="col-md-8 d-flex justify-content-between align-items-center flex-column">
                         <div>
@@ -112,7 +112,7 @@
                             <p>Visit HealthTrackRx University, your on-demand resource for infection testing made easy.</p>
                         </div>
                         <div>
-                            <a href="https://www.healthtrackrx.com/htrxu/" class="btn btn-primary">HealthTrackRx University</a>
+                            <a href="https://www.healthtrackrx.com/htrxu/" class="btn btn-primary text-capitalize">HealthTrackRx University</a>
                         </div>
                     </div>
                 </div>
@@ -158,7 +158,7 @@
                                 <li>
                                     <a href="https://www.linkedin.com/company/healthtrackrx/" target="_blank"><img src="/images/linkedin-icon.svg" alt="LinkedIn" height="23" class="me-2" /></a>
                                     <a href="https://www.facebook.com/healthtrackrx" target="_blank"><img src="/images/facebook-icon.svg" alt="Facebook" height="23" class="me-2" /></a>
-                                    <a href="https://www.youtube.com/@HealthTrackRx-PCR target="_blank""><img src="/images/youtube-icon.svg" alt="YouTube" height="23" /></a>
+                                    <a href="https://www.youtube.com/@HealthTrackRx-PCR" target="_blank"><img src="/images/youtube-icon.svg" alt="YouTube" height="23" /></a>
                                 </li>
                             </ul>
                         </div>
