--- a/index.html
+++ b/index.html
@@ -87,32 +87,36 @@
 <section id="resources">
     <div class="container">
         <div class="row justify-content-center">
-            <div class="col-lg-6 col-md-10 col-12 contact-support text-center">
-                <div class="row justify-content-center h-100">
-                    <div class="col-md-8">
-                        <img src="/images/contact-icon.svg" alt="Contact Support" height="111" />
-                        <p class="mt-2 mb-4 fw-bolder text-uppercase">Contact</p>
-                        <h2>Contact support</h2>
-                        <p>Do you need assistance? Let us help you!</p>
-                        <p><a href="tel:8662873218" class="color-black">Call Us: 866-287-3218</a></p>
-                        <p class="fw-bold mb-0">Hours of Operation:</p>
-                        <p class="fw-bold mb-0">MON-FRI: 8am to 8pm ET</p>
-                        <p class="fw-bold mb-">SAT: 9:30am to 6pm ET</p>
-                        <a href="tel:8662873218" class="btn btn-secondary">CALL US</a>
+            <div class="col-lg-6 col-md-10 col-12 px-0">
+                <div class="contact-support h-100 text-center">
+                    <div class="row justify-content-center g-0 h-100">
+                        <div class="col-md-8 col-9 d-flex justify-content-between align-items-center flex-column">
+                            <img src="/images/contact-icon.svg" alt="Contact Support" height="111" />
+                            <p class="mt-2 mb-4 fw-bolder text-uppercase">Contact</p>
+                            <h2>Contact support</h2>
+                            <p>Do you need assistance? Let us help you!</p>
+                            <p><a href="tel:8662873218" class="color-black">Call Us: 866-287-3218</a></p>
+                            <p class="fw-bold mb-0">Hours of Operation:</p>
+                            <p class="fw-bold mb-0">MON-FRI: 8am to 8pm ET</p>
+                            <p class="fw-bold mb-">SAT: 9:30am to 6pm ET</p>
+                            <a href="tel:8662873218" class="btn btn-secondary">CALL US</a>
+                        </div>
                     </div>
                 </div>
             </div>
-            <div class="col-lg-6 col-md-10 col-12 tools-and-resources text-center">
-                <div class="row justify-content-center h-100">
-                    <div class="col-md-8 d-flex justify-content-between align-items-center flex-column">
-                        <div>
-                            <img src="/images/htrx-university-icon.svg" alt="HealthTrackRX University" height="111" />
-                            <p class="mt-2 mb-4 fw-bolder text-uppercase">Education</p>
-                            <h2>Tools + Resources</h2>
-                            <p>Visit HealthTrackRx University, your on-demand resource for infection testing made easy.</p>
-                        </div>
-                        <div>
-                            <a href="https://www.healthtrackrx.com/htrxu/" class="btn btn-primary text-capitalize">HealthTrackRx University</a>
+            <div class="col-lg-6 col-md-10 col-12 px-0">
+                <div class="tools-and-resources h-100 text-center">
+                    <div class="row justify-content-center g-0 h-100">
+                        <div class="col-md-8 col-9 d-flex justify-content-between align-items-center flex-column">
+                            <div>
+                                <img src="/images/htrx-university-icon.svg" alt="HealthTrackRX University" height="111" />
+                                <p class="mt-2 mb-4 fw-bolder text-uppercase">Education</p>
+                                <h2>Tools + Resources</h2>
+                                <p>Visit HealthTrackRx University, your on-demand resource for infection testing made easy.</p>
+                            </div>
+                            <div>
+                                <a href="https://www.healthtrackrx.com/htrxu/" class="btn btn-primary text-capitalize">HealthTrackRx University</a>
+                            </div>
                         </div>
                     </div>
                 </div>
