--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <section id="hero">
     <div class="container">
         <div class="row">
-            <div class="col-lg-7 col-md-9 col-12 p-0">
+            <div class="col-xl-7 col-lg-8 col-md-9 col-12 p-0">
                 <div class="login-container">
                     <h1>Welcome to the HealthTrackRx Client Web Portal</h1>
                     <form class="login-form">
